[package]
name = "i-haz-deps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
async-graphql = "4.0.5"
clap = { version = "3.2.12", features = ["derive"] }
figment = "0.10.6"
literally = "0.1.3"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
sqlx = { version = "0.6.0", features = ["runtime-actix-rustls"] }
tokio = "1.20.0"
