[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
i-haz-deps = { version = "0.1.0", path = "../i-haz-deps" }
local-deps = { version = "0.1.0", path = "../local-deps" }
sqlx = { version = "0.6.0", features = ["runtime-actix-rustls"] }
tokio = { version = "1.20.0", features = ["macros"] }
